--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         .mode-button:hover {
             background-color: #555;
         }
-  .Robocep-button {
+
+        .Robocep-button {
             position: absolute;
             top: 80px;
             right: 150px;
@@ -52,7 +53,8 @@
         .Robocep-button:hover {
             background-color: #555;
         }
-          .Robocep-button i {
+
+        .Robocep-button i {
             margin-right: 0.5rem;
         }
 
@@ -152,7 +154,7 @@
             color: #fff;
         }
 
-              .dark-mode .result {
+        .dark-mode .result {
             background-color: #333;
             color: #fff;
         }
@@ -183,14 +185,210 @@
         <h1>Bots Robocep</h1>
     </div>
     <button class="mode-button" id="mode-button">Modo Claro</button>
-    <button class="instagram-button" id="instagram-button" onclick="window.open('https://www.instagram.com/bots_robocep/', '_blank')">
+    <!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bots Robocep</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .header {
+            background-color: #333;
+            color: #fff;
+            padding: 1rem;
+            text-align: center;
+        }
+
+        .header h1 {
+            margin: 0;
+        }
+
+        .mode-button {
+            position: absolute;
+            top: 80px;
+            right: 10px;
+            background-color: #444;
+            color: #fff;
+            border: none;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        .mode-button:hover {
+            background-color: #555;
+        }
+
+        .Robocep-button {
+            position: absolute;
+            top: 80px;
+            right: 150px;
+            background-color: #444;
+            color: #fff;
+            border: none;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        .Robocep-button:hover {
+            background-color: #555;
+        }
+
+        .Robocep-button i {
+            margin-right: 0.5rem;
+        }
+
+        .instagram-button {
+            position: absolute;
+            top: 80px;
+            right: 280px;
+            background-color: #444;
+            color: #fff;
+            border: none;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        .instagram-button:hover {
+            background-color: #444;
+        }
+
+        .instagram-button i {
+            margin-right: 0.5rem;
+        }
+
+        .container {
+            max-width: 400px;
+            margin: 2rem auto;
+            padding: 2rem;
+            background-color: #f9f9f9;
+            border: 1px solid #ddd;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .label {
+            display: block;
+            margin-bottom: 0.5rem;
+        }
+
+        .input {
+            padding: 0.5rem;
+            font-size: 1rem;
+            border: 1px solid #ccc;
+        }
+
+        .button {
+            background-color: #333;
+            color: #fff;
+            border: none;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        .button:hover {
+            background-color: #444;
+        }
+
+        .result {
+            margin-top: 2rem;
+        }
+
+        .result p {
+            margin-bottom: 0.5rem;
+        }
+
+        .historico {
+            margin-top: 2rem;
+        }
+
+        .historico p {
+            margin-bottom: 0.5rem;
+        }
+
+        .dark-mode {
+            background-color: #333;
+            color: #fff;
+        }
+
+        .dark-mode .header {
+            background-color: #444;
+        }
+
+        .dark-mode .container {
+            background-color: #333;
+        }
+
+        .dark-mode .label {
+            color: #fff;
+        }
+
+        .dark-mode .input {
+            background-color: #444;
+            color: #fff;
+        }
+
+        .dark-mode .button {
+            background-color: #555;
+            color: #fff;
+        }
+
+        .dark-mode .result {
+            background-color: #333;
+            color: #fff;
+        }
+
+        .historico-button {
+            position: absolute;
+            top: 80px;
+            right: 410px;
+            background-color: #444;
+            color: #fff;
+            border: none;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        .historico-button:hover {
+            background-color: #555;
+        }
+
+        .historico-button i {
+            margin-right: 0.5rem;
+        }
+    </style>
+</head>
+<body>
+    <div class="header">
+        <h1>Bots Robocep</h1>
+    </div>
+    <button class="mode-button" id="mode-button">Modo Claro</button>
+       <button class="instagram-button" id="instagram-button" onclick="window.open('https://www.instagram.com/bots_robocep/', '_blank')">
       <i class="fa-brands fa-instagram"></i> Instagram
     </button>
     <button class="Robocep-button" id="Robocep-button" onclick="window.open('https://robocep.pythonanywhere.com/', '_blank')">
-  <i class="fa-solid fa-robot"></i> Robocep
-</button>
+      <i class="fa-solid fa-robot"></i> Robocep
+    </button>
     <button class="historico-button" id="historico-button" onclick="generatePdf()">Baixar Histórico em PDF</button>
     <div class="container">
+        <form id="cadastro-form">
+            <label class="label" for="nome">Nome</label>
+            <input type="text" id="nome" class="input">
+            <label class="label" for="email">Email</label>
+            <input type="email" id="email" class="input">
+            <label class="label" for="senha">Senha</label>
+            <input type="password" id="senha" class="input">
+            <button class="button" id="cadastro-button">Cadastrar</button>
+        </form>
         <form id="login-form">
             <label class="label" for="email">Email</label>
             <input type="email" id="email" class="input">
@@ -210,10 +408,12 @@
             const instagramButton = document.getElementById('instagram-button');
             const RobocepButton = document.getElementById('Robocep-button');
             const historicoButton = document.getElementById('historico-button');
+            const cadastroForm = document.getElementById('cadastro-form');
+            const cadastroButton = document.getElementById('cadastro-button');
             const loginForm = document.getElementById('login-form');
+            const loginButton = document.getElementById('login-button');
             const emailInput = document.getElementById('email');
             const senhaInput = document.getElementById('senha');
-            const loginButton = document.getElementById('login-button');
             const resultText = document.getElementById('result-text');
             const historicoText = document.getElementById('historico-text');
 
@@ -226,11 +426,39 @@
                 }
             });
 
+            cadastroButton.addEventListener('click', (e) => {
+                e.preventDefault();
+                const nome = document.getElementById('nome').value;
+                const email = document.getElementById('email').value;
+                const senha = document.getElementById('senha').value;
+
+                // Enviar os dados para o servidor
+                fetch('/cadastro', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ nome, email, senha })
+                })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        alert('Cadastro realizado com sucesso!');
+                    } else {
+                        alert('Erro ao cadastrar: ' + data.error);
+                    }
+                })
+                .catch(error => {
+                    console.error('Erro ao cadastrar:', error);
+                });
+            });
+
             loginButton.addEventListener('click', (e) => {
                 e.preventDefault();
                 const email = emailInput.value;
                 const senha = senhaInput.value;
-                // fazer login aqui
+
+                // Fazer login aqui
                 resultText.textContent = `Bem-vindo, ${email}!`;
             });
 
@@ -243,3 +471,4 @@
         </script>
     </body>
 </html>
+     
