--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
         <div class="historico">
             <p id="historico-text"></p>
         </div>
+        <div class="calculadora">
+            <h2>Calculadora de Chances</h2>
+            <label for="tentativas">Tentativas:</label>
+            <input type="number" id="tentativas" value="0">
+            <label for="acertos">Acertos:</label>
+            <input type="number" id="acertos" value="0">
+            <button id="calcular-chances">Calcular Chances</button>
+            <p id="chances-text"></p>
+        </div>
 
         <script>
             const modeButton = document.getElementById('mode-button');
@@ -59,6 +68,10 @@
             const senhaLoginInput = document.getElementById('senha-login');
             const resultText = document.getElementById('result-text');
             const historicoText = document.getElementById('historico-text');
+            const calculadora = document.getElementById('calculadora');
+            const tentativasInput = document.getElementById('tentativas');
+            const acertosInput = document.getElementById('acertos');
+            const chancesText = document.getElementById('chances-text');
 
             modeButton.addEventListener('click', () => {
                 document.body.classList.toggle('dark-mode');
@@ -69,7 +82,7 @@
                 }
             });
 
-            cadastroButton.addEventListener('click', (e) => {
+                      cadastroButton.addEventListener('click', (e) => {
                 e.preventDefault();
                 const nome = document.getElementById('nome').value;
                 const email = emailCadastroInput.value;
@@ -96,7 +109,7 @@
                 });
             });
 
-                     loginButton.addEventListener('click', (e) => {
+            loginButton.addEventListener('click', (e) => {
                 e.preventDefault();
                 const email = emailLoginInput.value;
                 const senha = senhaLoginInput.value;
@@ -113,6 +126,7 @@
                 .then(data => {
                     if (data.success) {
                         resultText.textContent = `Bem-vindo, ${email}!`;
+                        calculadora.style.display = 'block'; // Mostrar a calculadora de chances
                     } else {
                         resultText.textContent = `Erro ao logar: ${data.error}`;
                     }
@@ -120,6 +134,14 @@
                 .catch(error => {
                     console.error('Erro ao logar:', error);
                 });
+            });
+
+            const calcularChancesButton = document.getElementById('calcular-chances');
+            calcularChancesButton.addEventListener('click', () => {
+                const tentativas = parseInt(tentativasInput.value);
+                const acertos = parseInt(acertosInput.value);
+                const chances = (acertos / tentativas) * 100;
+                chancesText.textContent = `Você tem ${chances.toFixed(2)}% de chances de acerto!`;
             });
 
             function generatePdf() {
