--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <h1>Calculadora de Porcentagem</h1>
     <form>
         <label for="tentativas">Tentativas:</label>
-        <input type="number" id="tentativas" value="10">
+        <input type="number" id="tentativas" value="">
 
         <label for="acertos">Acertos:</label>
-        <input type="number" id="acertos" value="8">
+        <input type="number" id="acertos" value="">
 
         <button type="button" onclick="calcularPorcentagem()">Calcular Porcentagem</button>
 
