--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Porcentagem</title>
+    <title>Bots Robocep</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -84,7 +84,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 - Todos os direitos reservados.</p>
+        <p>&copy; 2024 Bots Robocep- Todos os direitos reservados.</p>
     </footer>
     <script>
         const calculadoraForm = document.getElementById('calculadora-form');
