--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <footer>
         <p>&copy; 2023 - Todos os direitos reservados.</p>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.min.js"></script>
     <script>
         const darkModeToggle = document.getElementById('dark-mode-toggle');
         const body = document.body;
