--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 - Todos os direitos reservados.</p>
+        <p>&copy; 2024 - Bots Robocep.</p>
     </footer>
     <script>
         const darkModeToggle = document.getElementById('dark-mode-toggle');
